# desafio-banco-imobiliario

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  work-banco-imobiliario.code-workspace
src/: Makefile  main.py
src/banco_imobiliario/: config.py  settings.toml
src/banco_imobiliario/board/: base.py  card_patrimony.py  factory.py  game_board.py  game_statistics.py  player_cautious.py  player_demanding.py  player_impulsive.py  player_random.py
src/htmlcov/: banco_imobiliario___init___py.html  banco_imobiliario_board___init___py.html  banco_imobiliario_board_base_py.html  banco_imobiliario_board_card_patrimony_py.html  banco_imobiliario_board_factory_py.html  banco_imobiliario_board_game_board_py.html  banco_imobiliario_board_game_statistics_py.html  banco_imobiliario_board_player_cautious_py.html  banco_imobiliario_board_player_demanding_py.html  banco_imobiliario_board_player_impulsive_py.html  banco_imobiliario_board_player_random_py.html  banco_imobiliario_config_py.html  index.html  status.json
src/tests/: conftest.py  test_board.py  test_player.py
