[tool.poetry]
name = "banco-imobiliario"
version = "0.1.0"
description = "Comandos para uso em jogos similar ao banco imobiliario"
authors = ["gladson <gladsonbrito@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.4"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
