[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[flake8]
exclude = docs/*

[coverage:run]
omit = */tests/*

[isort]
known_first_party=board
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True

[aliases]
test=pytest
[tool:pytest]

python_files = test_*.py *_test.py